--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,3 @@
-<html>
-    <head>
-        <title><%= title %></title>
-    </head>
+<link rel="stylesheet" href="/css/layout.css">
 
-    <body>
-        <h1>Inside <%= title %>.</h1>
-    </body>
-
-</html>
+<h1>Inside of <%= title %></h1>
