user authentication working except signout

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 
 <div class="form-container">
 
-    <form action="/user/login-user" method="post">
+    <form action="/user/create-session" method="post">
         <label>Email</label><input type="text" name="email" required>
         <br>
         <label>Password</label><input type="password" name="password" required>
