passport.js setup

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -2,4 +2,16 @@
     XSpace 
     <br>
     Page = <%= title %>
+
+    <ul>
+        <% if(locals.user){ %>
+            <li> <%= user.name %> </li>
+            <li> <a href="/user/sign-out">Sign Out</a> </li>
+        <% }else{ %>
+            <li> <a href="/user/login">Sign in</a> </li>
+            <li> <a href="/user/signup">Sign up</a> </li>
+        <% } %>
+    </ul>
+
+
 </header>
