--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -2,3 +2,12 @@ body {
     background-color: thistle;
     border: 2px solid red;
 }
+
+header{
+    background-color: aquamarine;
+}
+
+
+footer{
+    background-color: aquamarine;
+}
