--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,3 +1,7 @@
 <footer>
-    droidx
+    <link rel="stylesheet" href="/css/footer.css">
+
+    <p>Dev:droidx</p>
+    <p>Contact:1234567890</p>
+    <p>Location:Miramar</p>
 </footer>
