--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,6 +1,8 @@
 <html>
     <head>
+        
         <title><%= title %></title>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet"> 
         <%- style %>
     </head>
 
