--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,19 @@
 <link rel="stylesheet" href="/css/layout.css">
 
 <h1>Inside of <%= title %></h1>
+
+
+<form action="/post/create" method="POST" name='new-post-form'>
+    <textarea name="content" cols="50" rows="3"></textarea>
+    <input type="submit" value="POST">
+</form>
+
+<div id="post-container">
+    
+    for i in posts[]:
+        <div class="post-item">
+            post.content
+            post.username
+        </div>
+
+</div>
