--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,7 +11,7 @@
 
         <%- body %>
 
-        <%- include('_footer'); %>
+        <%- include('_footer') %>
         <%- script %>
     </body>
 
