--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,10 +1,24 @@
-<div class="post-item">
+<div id="<%= post._id %>" class="post-item">
     <%= post.user.name %>
     <br>
     <small> <%= post.content %> </small>
 
     <% if(locals.user && locals.user.id == post.user.id) { %>
-        <a href="post/destroy/<%= post.id %>">Delete</a>
+        <a class="post-delete" href="post/destroy/<%= post.id %>">Delete</a>
     <% } %>
+
+    <div class="comment-container">
+        <% if(locals.user){ %>
+            <form action="/comment/create" method="POST" name="new-comment-form">
+                <input type="text" name="content" placeholder="Enter your comment here" required>
+                <input type="hidden" name="post" value="<%= post._id %>">
+                <input type="submit" value="Add comment">
+            </form>
+        <% } %>
+        
+        <% for(comment of post.comments){ %>
+            <%- include('_comment') -%>
+        <% } %>            
+    </div>
 
 </div>
