--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,7 +29,7 @@
                 }).show();
             <% } %>
             
-            <% if( flash.success && flash.error.length>0 ){ %>
+            <% if( flash.error && flash.error.length>0 ){ %>
                 new Noty({
                     text: '<%= flash.error %>',
                     theme: 'light',
