--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -4,4 +4,11 @@
 
 body {
     background-color: thistle;
+    width: 100%;
+    #body-container{
+        position: relative;
+        top: 120px;
+        width: 100%;
+
+    }
 }
