--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,8 +12,11 @@
     <body>
         <%- include('_header') %>
         
+        <div id="body-container">
 
-        <%- body %>
+            <%- body %>
+
+        </div>
 
         <%- include('_footer') %>
         <%- script %>
