--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,10 +1,23 @@
 header {
+  position: absolute;
+  top: 0%;
+  left: 0%;
   width: 100%;
   height: 100px;
-  background-color: #5fb4fd; }
+  background-color: #5fb4fd;
+  z-index: 5;
+  box-shadow: 0px 0px 10px 0px #000000; }
   header h1 {
     margin-left: 30px;
     display: inline-block; }
+    header h1 a {
+      background-color: #4c97fa;
+      padding: 10px;
+      text-decoration: none;
+      border-radius: 40px;
+      box-shadow: 1px 1px 1px 1px #3e5b92; }
+    header h1 a:hover {
+      box-shadow: 3px 3px 3px 3px #3e5b92; }
   header p {
     display: inline-block;
     padding: 20px;
