--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -1,11 +1,28 @@
+
 header{
+    position: absolute;
+    top: 0%;
+    left: 0%;
     width: 100%;
     height: 100px;
     background-color: rgb(95, 180, 253);
+    z-index: 5;
+    box-shadow: 0px 0px 10px 0px #000000;
 
     h1{
         margin-left: 30px;
         display: inline-block;
+
+        a{
+            background-color: rgb(76, 151, 250);
+            padding: 10px;
+            text-decoration: none;
+            border-radius: 40px;
+            box-shadow: 1px 1px 1px 1px rgb(62, 91, 146);
+        }
+        a:hover{
+            box-shadow: 3px 3px 3px 3px rgb(62, 91, 146);
+        }
     }
 
     p{
