--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,7 +1,7 @@
 <header>
     <link rel="stylesheet" href="/css/header.css">
 
-    <h1>XSpace</h1>
+    <h1><a href="/">Codial</a></h1>
     
 
     <% if(locals.user){ %>
