--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,9 +1,10 @@
 footer {
-  margin-top: 100px;
-  bottom: 0px;
+  position: relative;
+  top: 200px;
   width: 100%;
   display: flex;
-  background-color: #5fb4fd; }
+  background-color: cornflowerblue;
+  box-shadow: 0px 0px 15px 0px #00417e; }
   footer p {
     margin: auto;
     display: inline-block; }
