--- a/assets/css/form_style.css
+++ b/assets/css/form_style.css
@@ -1,10 +1,24 @@
-form {
-  width: 500px;
+.form-container {
+  margin: auto;
+  position: relative;
+  top: 17vh;
+  width: 400px;
   padding: 30px;
-  background-color: aqua;
+  background-color: cornflowerblue;
   border-radius: 10px;
-  text-align: left;
-  color: rgba(0, 0, 0, 0.7); }
-
-form label:hover {
-  color: black; }
+  box-shadow: 0px 0px 10px 0px #000000; }
+  .form-container label {
+    margin: 10px; }
+  .form-container input {
+    margin: 2px; }
+  .form-container button {
+    margin-top: 20px; }
+  .form-container p a {
+    margin-top: 10px;
+    padding: 8px;
+    text-decoration: none;
+    color: blue;
+    border-radius: 15px; }
+  .form-container p a:hover {
+    box-shadow: 0px 0px 5px 0px #1c6b99;
+    background-color: #88a8e4; }
