--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -9,6 +9,7 @@ header {
   box-shadow: 0px 0px 10px 0px #000000; }
   header h1 {
     margin-left: 30px;
+    margin-top: 28px;
     display: inline-block; }
     header h1 a {
       background-color: #4c97fa;
@@ -28,6 +29,7 @@ header {
     header p a:hover {
       background-color: #34a0ff;
       border-radius: 10px;
-      transition: 0.2s; }
+      transition: 0.2s;
+      box-shadow: 0px 0px 5px 0px #00417e; }
   header .h-btn {
     float: right; }
