--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,3 +1,11 @@
+form textarea {
+  border-radius: 15px;
+  width: 100%;
+  display: block;
+  margin: 0px 0px 30px 0px;
+  padding: 10px;
+  background-color: #f5dfdf; }
+
 #post-container {
   width: 100%; }
   #post-container .post-item {
@@ -6,6 +14,25 @@
     width: 100%;
     margin: auto;
     padding: 10px;
-    border-radius: 5px; }
+    border-radius: 10px;
+    margin: 10px; }
+    #post-container .post-item small {
+      padding: 15px; }
+    #post-container .post-item .comment-container {
+      padding: 10px; }
   #post-container .post-item:hover {
-    background-color: #62aafd; }
+    background-color: #62aafd;
+    box-shadow: 0px 0px 5px 0px #f34f4f;
+    transition-duration: 300ms; }
+
+#friends-container {
+  border: 2px solid lightcoral;
+  border-radius: 10px;
+  width: 200px;
+  padding: 15px; }
+  #friends-container .friend-item a {
+    padding: 5px;
+    text-decoration: none; }
+  #friends-container .friend-item a:hover {
+    border-left: 6px solid lightcoral;
+    transition-duration: 300ms; }
