--- a/assets/scss/form_style.scss
+++ b/assets/scss/form_style.scss
@@ -1,13 +1,36 @@
-form{
-    width: 500px;
+.form-container{
+    margin: auto;
+    position: relative;
+    top: 17vh;
+    width: 400px;
     padding: 30px;
-    background-color: aqua;
+    background-color: cornflowerblue;
     border-radius: 10px;
-    text-align: left;
-    color: rgba(0,0,0,.7);;
-}
+    box-shadow: 0px 0px 10px 0px #000000;
+    
+    label{
+        margin: 10px;
+    }
 
+    input{
+        margin: 2px;
+    }
 
-form label:hover{
-    color: rgba(0,0,0,1);
+    button{
+        margin-top: 20px;
+    }
+
+    p{
+        a{
+            margin-top: 10px;
+            padding: 8px;
+            text-decoration: none;
+            color: blue;
+            border-radius: 15px;
+        }
+        a:hover{
+            box-shadow: 0px 0px 5px 0px #1c6b99;
+            background-color: rgb(136, 168, 228);
+        }
+    }
 }
