--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -11,6 +11,7 @@ header{
 
     h1{
         margin-left: 30px;
+        margin-top: 28px;
         display: inline-block;
 
         a{
@@ -39,6 +40,7 @@ header{
             background-color: rgb(52, 160, 255);
             border-radius: 10px;
             transition: 0.2s;
+            box-shadow: 0px 0px 5px 0px #00417e;
         }
     }
     .h-btn{
