Comment mailer with template

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -2,7 +2,7 @@
   font-family: 'Noto Sans JP', sans-serif; }
   * body {
     position: absolute;
-    background-color: #9fd4ff;
+    background-color: #ffb6b6;
     width: 100%;
     top: 0px;
     margin: auto; }
