prev commits approach changed, verifying via reset link, Mail sending successfully

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -7,7 +7,7 @@
     <% if(locals.user){ %>
         <p> <%= user.name %> </p>
         <p class="h-btn"> <a href="/user/sign-out">Sign Out</a> </p>
-        <p class="h-btn"> <a href="/user/confirm-password">Reset Password</a> </p>
+        <p class="h-btn"> <a href="/user/reset-password">Reset Password</a> </p>
     <% } else { %>
         <p class="h-btn"> <a href="/user/login">Sign in</a> </p>
         <p class="h-btn"> <a href="/user/signup">Sign up</a> </p>
