--- a/views/confirm_email.ejs
+++ b/views/confirm_email.ejs
@@ -2,8 +2,8 @@
 
 <div class="form-container">
 
-    <form action="/user/check-token" method="post">
-        <label>Reset code:</label><input type="text" name="reset-code" required>
+    <form action="/user/check-email" method="post">
+        <label>Enter Email</label><input type="email" name="email" required>
         <br>
         <button type="submit">Submit</button>
     </form>
