--- a/views/confirm_password.ejs
+++ b/views/confirm_password.ejs
@@ -2,7 +2,7 @@
 
 <div class="form-container">
 
-    <form action="/user/reset-password" method="post">
+    <form action="/user/check-password" method="post">
         <label>Enter Old Password</label><input type="password" name="old_password" required>
         <br>
         <button type="submit">Submit</button>
