--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,6 +11,11 @@
     </form>
 
     <p>
+        <a href="/user/forget-password">Forget Password</a>
+    </p>
+
+
+    <p>
         <a href="/user/auth/google">Sign up using Google</a>
     </p>
 
