--- a/views/update-password.ejs
+++ b/views/update-password.ejs
@@ -2,10 +2,10 @@
 
 <div class="form-container">
 
-    <form action="/user/update-password" method="post">
-        <label>New Password</label><input type="password" name="new-password" required>
+    <form action="/user/update-password/<%= id %>" method="post">
+        <label>New Password</label><input type="password" name="new_password" required>
         <br>
-        <label>Confirm Password</label><input type="password" name="confirm-password" required>
+        <label>Confirm Password</label><input type="password" name="confirm_password" required>
         <br>
         <button type="submit">Submit</button>
     </form>
