--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -7,7 +7,7 @@ form textarea {
   background-color: #f5dfdf; }
 
 #post-container {
-  width: 100%; }
+  width: 80%; }
   #post-container .post-item {
     background-color: #82bcff;
     border: 2px solid lightcoral;
@@ -16,10 +16,36 @@ form textarea {
     padding: 10px;
     border-radius: 10px;
     margin: 10px; }
-    #post-container .post-item small {
-      padding: 15px; }
+    #post-container .post-item .post-content {
+      border: 1px solid black;
+      border-radius: 10px;
+      padding: 5px; }
+      #post-container .post-item .post-content small {
+        padding: 15px; }
+    #post-container .post-item .item-buttons {
+      width: 300px;
+      padding: 5px;
+      display: flex;
+      flex-direction: row;
+      justify-content: start; }
+      #post-container .post-item .item-buttons div * {
+        padding-right: 20px; }
     #post-container .post-item .comment-container {
       padding: 10px; }
+      #post-container .post-item .comment-container .comment-item {
+        padding: 3px; }
+        #post-container .post-item .comment-container .comment-item .comment-content {
+          border: 1px solid black;
+          border-radius: 10px;
+          padding: 5px; }
+        #post-container .post-item .comment-container .comment-item .item-buttons {
+          width: 300px;
+          padding: 5px;
+          display: flex;
+          flex-direction: row;
+          justify-content: start; }
+          #post-container .post-item .comment-container .comment-item .item-buttons div * {
+            padding-right: 20px; }
   #post-container .post-item:hover {
     background-color: #62aafd;
     box-shadow: 0px 0px 5px 0px #f34f4f;
