--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -43,7 +43,7 @@ form{
             }
         }
 
-        .comment-container{
+        #comment-container{
             padding: 10px;
 
             .comment-item{
