--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -10,4 +10,14 @@
       position: relative;
       top: 120px;
       width: 90%;
-      padding-left: 50px; }
+      padding-left: 50px;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between; }
+      * body #body-container #sidebar-container {
+        width: 15%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start; }
+        * body #body-container #sidebar-container * {
+          margin: 30px 0px 30px 0px; }
