--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -15,7 +15,20 @@
             top: 120px;
             width: 90%;
             padding-left: 50px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
 
+            #sidebar-container{
+                width: 15%;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+
+                *{
+                    margin: 30px 0px 30px 0px;
+                }
+            }
         }
     }
 
