--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -16,6 +16,12 @@
         <div id="details">
             <h1> NAME: <%= profile_user.name %> </h1>
             <p> EMAIL: <%= profile_user.email %> </p>
+            <!-- Logic -->
+            <a class='add-friend' onclick="addRemove()" href="/friend/add-remove/?id1=<%= user.id %>&id2=<%= profile_user.id %>">Add friend</a>
         </div>
+
     <% } %>
 </div>
+
+
+<script type="text/js" src="js/add_remove_friend.js"></script>
