view_helper added, has bugs for profile, form_style

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,5 +1,6 @@
 <footer>
-    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="<%= assetPath('css/footer.css') %>">
+
 
     <p>Dev:droidx</p>
     <p>Contact:1234567890</p>
