--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/profile.css">
+<link rel="stylesheet" href="<%= assetPath('css/profile.css') %>">
 
 <!-- Checking if logged in user is same as the profile user -->
 
