--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="/css/layout.css">
-<link rel="stylesheet" href="/css/home.css">
+<link rel="stylesheet" href="<%= assetPath('css/layout.css') %>">
+<link rel="stylesheet" href="<%= assetPath('css/home.css') %>">
 
 <div id="home-body">
 
