--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,5 @@
-<link rel="stylesheet" href="/css/form_style.css">
+<link rel="stylesheet" href="<%= assetPath('css/form_style.css') %>">
+
 
 <div class="form-container">
 
