--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,5 +1,5 @@
 <footer>
-    <link rel="stylesheet" href="<%= assetPath('css/footer.css') %>">
+    <link rel="stylesheet" href="<%= assetPath("css/footer.css") %>">
 
 
     <p>Dev:droidx</p>
