--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,7 +6,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js" ></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.css">
-        
+        <link rel="stylesheet" href="<%= assetPath('css/layout.css') %>">
+
         <%- style %>
     </head>
 
