--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,12 +1,13 @@
 <html>
     <head>
-        
         <title><%= title %></title>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js" ></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.css">
         <link rel="stylesheet" href="<%= assetPath('css/layout.css') %>">
+        <!-- Google console verification -->
+        <meta name="google-site-verification" content="8E9VDKn6VCye5vgXSRnaQJ-TcU_9m6g9g-vAe_QphpI" />
 
         <%- style %>
     </head>
