--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -28,5 +28,6 @@
 </div>
 
 
-
-<script type="text/javascript" src="/js/add_remove_friend.js"></script>
+<!-- 
+<script type="text/javascript" src="/js/add_remove_friend.js"></script> -->
+<script type="text/javascript" src="<%= assetPath('js/add_remove_friend.js') %>"></script>
