--- a/assets/css/form_style.css
+++ b/assets/css/form_style.css
@@ -1,24 +1,1 @@
-.form-container {
-  margin: auto;
-  position: relative;
-  top: 17vh;
-  width: 400px;
-  padding: 30px;
-  background-color: cornflowerblue;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px 0px #000000; }
-  .form-container label {
-    margin: 10px; }
-  .form-container input {
-    margin: 2px; }
-  .form-container button {
-    margin-top: 20px; }
-  .form-container p a {
-    margin-top: 10px;
-    padding: 8px;
-    text-decoration: none;
-    color: blue;
-    border-radius: 15px; }
-  .form-container p a:hover {
-    box-shadow: 0px 0px 5px 0px #1c6b99;
-    background-color: #88a8e4; }
+.form-container{margin:auto;position:relative;top:17vh;width:400px;padding:30px;background-color:#6495ed;border-radius:10px;box-shadow:0 0 10px 0 #000}.form-container label{margin:10px}.form-container input{margin:2px}.form-container button{margin-top:20px}.form-container p a{margin-top:10px;padding:8px;text-decoration:none;color:blue;border-radius:15px}.form-container p a:hover{box-shadow:0 0 5px 0 #1c6b99;background-color:#88a8e4}
