--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,23 +1,1 @@
-* {
-  font-family: 'Noto Sans JP', sans-serif; }
-  * body {
-    position: absolute;
-    background-color: #ffb6b6;
-    width: 100%;
-    top: 0px;
-    margin: auto; }
-    * body #body-container {
-      position: relative;
-      top: 120px;
-      width: 90%;
-      padding-left: 50px;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between; }
-      * body #body-container #sidebar-container {
-        width: 15%;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start; }
-        * body #body-container #sidebar-container * {
-          margin: 30px 0px 30px 0px; }
+*{font-family:Noto Sans JP,sans-serif}* body{position:absolute;background-color:#ffb6b6;width:100%;top:0;margin:auto}* body #body-container{position:relative;top:120px;width:90%;padding-left:50px;display:flex;flex-direction:row;justify-content:space-between}* body #body-container #sidebar-container{width:15%;display:flex;flex-direction:column;justify-content:flex-start}* body #body-container #sidebar-container *{margin:30px 0}
