--- a/views/home.ejs
+++ b/views/home.ejs
@@ -43,8 +43,7 @@
 
 </div>
 
-
-<script src="js/toggle_likes.js"></script>
+<script type="text/javascript" src="<%= assetPath('js/toggle_likes.js') %>"></script>
 <script>
     $('.toggle-like-button').each(function(){
         let self = this;
@@ -54,5 +53,6 @@
 </script>
 
 
-<script src="/js/home_comments.js"></script>
-<script src="/js/home_posts.js"></script>
+<script type="text/javascript" src="<%= assetPath('js/home_comments.js') %>"></script>
+<script type="text/javascript" src="<%= assetPath('js/home_posts.js') %>"></script>
+
