--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,1 +1,10 @@
-footer{position:relative;top:550px;width:100%;display:flex;background-color:#6495ed;box-shadow:0 0 15px 0 #00417e}footer p{margin:auto;display:inline-block}
+footer {
+  position: relative;
+  top: 550px;
+  width: 100%;
+  display: flex;
+  background-color: cornflowerblue;
+  box-shadow: 0px 0px 15px 0px #00417e; }
+  footer p {
+    margin: auto;
+    display: inline-block; }
